--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -56,7 +56,8 @@
 .input:focus, 
 .button:focus,
 .input-message:focus,
-.send-msg-btn:focus {
+.send-msg-btn:focus,
+.exit-button:focus {
   outline: none;
 }
 
@@ -90,9 +91,16 @@
   max-width: 1200px;
 }
 
-.member-list{
+.left-panel {
   display: flex;
   width: 25%;
+  height: 100%;
+}
+
+.member-list{
+  display: flex;
+  flex: 1;
+  width: 100%;
   height: 100%;
   border-radius: 10px;
   background-color: rgb(91, 164, 215);
@@ -117,6 +125,20 @@
   background-color: transparent;
   color: white;
   font-family: inherit;
+  overflow: hidden;
+}
+
+.exit-button{
+  height: 63px;
+  background-color: rgb(91, 164, 215);
+  color: white;
+  border-radius: 10px;
+  border-style: none;
+  font-family: inherit;
+  margin-top: 10px;
+  line-height: 30px;
+  font-size: 25px;
+  cursor: pointer;
   overflow: hidden;
 }
 
