--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -8,6 +8,10 @@
   border-radius: 0px 0px 20px 20px;
   max-width: 70%;
   background-color: rgb(91, 164, 215);
+
+  -moz-box-shadow: 0 8px 18px 0 rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0 8px 18px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 8px 18px 0 rgba(0, 0, 0, 0.2);
 }
 
 .header-text{
