--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -25,6 +25,10 @@
   -webkit-transition:  all 300ms ease-in;
   -moz-transition:  all 300ms ease-in;
   transition:  all 300ms ease-in;
+
+  -moz-box-shadow: 0 8px 18px 0 rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0 8px 18px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 8px 18px 0 rgba(0, 0, 0, 0.2);
 }
 
 .inputContainer{
@@ -212,4 +216,8 @@ ul {
   position: fixed;
   top: 40px;
   right: 40px;
+}
+
+#body{
+  margin-top: 50px;
 }
